objects/CPQ_Release_Item__c.object
<CustomObject>
    <fields>
        <fullName>CPQ_Release__c</fullName>
        <label>CPQ Release</label>
        <referenceTo>CPQ_Release__c</referenceTo>
        <relationshipLabel>CPQ Release Items</relationshipLabel>
        <relationshipName>CPQ_Release_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Deployment_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployment Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Id_API_Field__c</fullName>
        <label>External Id API Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ids__c</fullName>
        <inlineHelpText>comma(,) seperated</inlineHelpText>
        <label>Ids</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Api_Name__c</fullName>
        <label>Object Api Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operation__c</fullName>
        <label>Operation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>DataMigrationOperations</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>uniqueId__c</fullName>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>CPQ Release Item</label>
    <nameField>
        <label>Object API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CPQ Release Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>